--- a/miSecretService-autostart.desktop
+++ b/miSecretService-autostart.desktop
@@ -6,6 +6,6 @@ Comment=Autostart entry for Krunner Secret Service plugin
 Keywords=Runner;Krunner
 Categories=Utilities
 Path=$HOME/.local/share/krunner/plugin/miSecretService/
-Exec=python3 "$HOME/.local/share/krunner/plugin/miSecretService/miSecretService.py"
+Exec=$HOME/.local/share/krunner/plugin/miSecretService/miSecretService.py
 Icon=changes-allow-symbolic
 StartupNotify=false
