Initial bitwarden conversion commit

--- a/mi-krunner-bwcli-autostart.desktop
+++ b/mi-krunner-bwcli-autostart.desktop
@@ -5,7 +5,7 @@ Name=Runner
 Comment=Autostart entry for Krunner Secret Service plugin
 Keywords=Runner;Krunner
 Categories=Utilities
-Path=$HOME/.local/share/krunner/plugin/miSecretService/
-Exec=$HOME/.local/share/krunner/plugin/miSecretService/miSecretService.py
+Path=LOCATION
+Exec=LOCATION/mi_krunner_bwcli.py
 Icon=changes-allow-symbolic
 StartupNotify=false
